# zip-extensions-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/: FUNDING.yml
.github/workflows/: publish.yml  rust.yml
docs/: zip-audit.md
src/: default_entry_handler.rs  entry_handler.rs  file_utils.rs  lib.rs  preserve_symlinks.rs  preserve_symlinks_handler.rs  preserver_symlinks_handler.rs  read.rs  read_extensions.rs  write.rs  write_extensions.rs
src/audit/: mod.rs  report.rs  scan.rs  zip_audit_reader.rs
src/audit/handlers/: duplicates.rs  encryption.rs  entry_audit_handler.rs  entry_view.rs  mod.rs  names.rs  path.rs  ratios.rs  recommendations.rs  symlinks.rs  util.rs
src/audit/utils/: absolute_path_checker.rs  mod.rs  parent_components_path_checker.rs  path_depth_analyzer.rs  windows_reserved_name_checker.rs
src/deflate/: is_zip.rs  mod.rs  preserve_symlinks.rs  zip_archive.rs  zip_archive_extensions.rs  zip_extract.rs  zip_writer.rs  zip_writer_extensions.rs
src/eap/: mod.rs
src/inflate/: entry_handler.rs  mod.rs  preserve_symlinks.rs  preserve_symlinks_handler.rs  zip_archive.rs  zip_extract.rs  zip_ignore_entry_handler.rs  zip_writer.rs
src/tests/: is_zip_test.rs  mod.rs  preserve_symlinks_test.rs  zip_ignore_test.rs
src/tests/audit/utils/: path_checker_abs_test.rs  path_depth_analyzer_test.rs  windows_reserved_name_checker_test.rs
