[package]
name = "zip-extensions"
version = "0.13.0"
authors = ["Matthias Friedrich <rushiblegit@gmail.com>"]
edition = "2024"
description = "An extension crate for zip."
readme = "README.md"
repository = "https://github.com/matzefriedrich/zip-extensions-rs"
license = "MIT"
keywords = ["zip", "archive", "compression"]
exclude = [
    "**/*.json",
    "**/*.yml",
    ".gitignore",
    "tests/*"
]

[dependencies]
zip = { version = "6.0", default-features = false }
ignore = "0.4"

[dev-dependencies]
tempfile = "3.23.0"
libc = "0.2.177"

[features]
aes-crypto = ["zip/aes-crypto"]
chrono = ["zip/chrono"]
deflate = ["zip/deflate"]
deflate-flate2 = ["zip/deflate-flate2"]
deflate-flate2-zlib = ["zip/deflate-flate2-zlib"]
deflate-flate2-zlib-rs = ["zip/deflate-flate2-zlib-rs"]
deflate-zopfli = ["zip/deflate-zopfli"]
jiff-02 = ["zip/jiff-02"]
lzma = ["zip/lzma"]
nt-time = ["zip/nt-time"]
xz = ["zip/xz"]
default = [
    "aes-crypto",
    "deflate",
    "lzma",
    "xz",
]
